# podscriber

./: .gitignore  Dockerfile  README.md  cleanup.py  cleanup.sh  config.py  docker-compose.yaml  get_config.py  main.py  podcast_history.html  podscriber.py  pyproject.toml  repo_root_config.py
chroma_db/: chroma.sqlite3
templates/: base.html  index.html
