[project]
name = "podscriber"
version = "0.2.0"
description = "A way to search podcasts listened to in Overcast"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "feedparser>=6.0.11",
    "ffmpeg-python>=0.2.0",
    "chromadb>=0.5.7",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
]
